# sv-comp-c

./: CMakeLists.txt  Makefile.config  Makefile.rules  README.md  generate_tests.py  sea.yaml  verify-seahorn.sh
bitvector/: CMakeLists.txt
lib/: .dc
lib/seahorn/: Makefile  seahorn_stubs.c
